2006-05-13  Jeroen T. Vermeulen <jtv@xs4all.nl>
 config/sample-headers/compiler/VisualC++.NET-2003/config-internal-compiler.h:
  - This compiler has vsnprintf(), thanks Bart Samwel
 doc/Doxyfile.in:
  - Disabled collaboration graphs (not of much use to end-users)
2006-05-07  Jeroen T. Vermeulen <jtv@xs4all.nl>
 doc/libpqxx.xml:
  - Fixed bugs that caused validation to fail
2006-05-06  Jeroen T. Vermeulen <jtv@xs4all.nl>
 doc/libpqxx.xml:
  - Updated copyright string
  - Added middle initial to my name
  - Only one transaction (per connection) at a time
2006-04-29  Jeroen T. Vermeulen <jtv@xs4all.nl>
 doc/libpqxx.xml:
  - No big performance gain with nontransaction (thanks Markus Schaber)
  - Use nontransaction for metadata modifications
 include/pqxx/connection_base.hxx:
  - Documented fact that PQhost() returns NULL if no host *specified*
2006-04-27  Jeroen T. Vermeulen <jtv@xs4all.nl>
 doc/libpqxx.xml:
  - nontransaction is only faster when read-only, thanks Markus Schaber
2006-04-01  Jeroen T. Vermeulen <jtv@xs4all.nl>
 configure.ac.in:
  - Remove unsafe loop optimizations with g++ 4.1; breaks standard library
 src/util.cxx:
  - Fixed conversion of non-negatable signed numbers (breaks with g++ 4.1)
 test/test000.cxx:
  - List tests as they proceed, to facilitate debugging
  - Use stringstreams as example for LONG_MIN/LONG_MAX strings
 test/test004.cxx, test/test006.cxx, test/test007.cxx, test/test013.cxx,
 test/test015.cxx, test/test017.cxx, test/test018.cxx, test/test023.cxx,
 test/test025.cxx, test/test026.cxx, test/test032.cxx, test/test034.cxx,
 test/test036.cxx, test/test037.cxx, test/test048.cxx, test/test050.cxx,
 test/test051.cxx, test/test052.cxx, test/test054.cxx, test/test057.cxx,
 test/test059.cxx, test/test065.cxx, test/test078.cxx, test/test079.cxx,
 test/test087.cxx:
  - Converted OnCommit()/OnAbort()/OnDoubt() to 2.x-style equivalents
2006-03-20  Jeroen T. Vermeulen <jtv@xs4all.nl>
 src/connection_base.cxx: